removing `.` from classes in copy, justify-content examples

--- a/src/pages/docs/appearance.mdx
+++ b/src/pages/docs/appearance.mdx
@@ -16,7 +16,7 @@ export const classes = { plugin }
 
 ## Usage
 
-Use `.appearance-none` to reset any browser specific styling on an element. This utility is often used when creating [custom Form components](/docs/examples/forms).
+Use `appearance-none` to reset any browser specific styling on an element. This utility is often used when creating [custom Form components](/docs/examples/forms).
 
 ```html
 <template preview class="text-center p-4">
