--- a/src/pages/docs/background-attachment.mdx
+++ b/src/pages/docs/background-attachment.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Fixed
 
-Use `.bg-fixed` to fix the background image relative to the viewport.
+Use `bg-fixed` to fix the background image relative to the viewport.
 
 ```html
 <template preview>
@@ -31,7 +31,7 @@ Use `.bg-fixed` to fix the background image relative to the viewport.
 
 ## Local
 
-Use `.bg-local` to scroll the background image with the container and the viewport.
+Use `bg-local` to scroll the background image with the container and the viewport.
 
 ```html
 <template preview>
@@ -45,7 +45,7 @@ Use `.bg-local` to scroll the background image with the container and the viewpo
 
 ## Scroll
 
-Use `.bg-scroll` to scroll the background image with the viewport, but not with the container.
+Use `bg-scroll` to scroll the background image with the viewport, but not with the container.
 
 ```html
 <template preview>
