--- a/src/pages/docs/background-repeat.mdx
+++ b/src/pages/docs/background-repeat.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Repeat
 
-Use `.bg-repeat` to repeat the background image both vertically and horizontally.
+Use `bg-repeat` to repeat the background image both vertically and horizontally.
 
 ```html
 <template preview>
@@ -30,7 +30,7 @@ Use `.bg-repeat` to repeat the background image both vertically and horizontally
 
 ## No Repeat
 
-Use `.bg-no-repeat` when you don't want to repeat the background image.
+Use `bg-no-repeat` when you don't want to repeat the background image.
 
 ```html
 <template preview>
@@ -43,7 +43,7 @@ Use `.bg-no-repeat` when you don't want to repeat the background image.
 
 ## Repeat Horizontally
 
-Use `.bg-repeat-x` to repeat the background image only horizontally.
+Use `bg-repeat-x` to repeat the background image only horizontally.
 
 ```html
 <template preview>
@@ -56,7 +56,7 @@ Use `.bg-repeat-x` to repeat the background image only horizontally.
 
 ## Repeat Vertically
 
-Use `.bg-repeat-y` to repeat the background image only vertically.
+Use `bg-repeat-y` to repeat the background image only vertically.
 
 ```html
 <template preview>
