--- a/src/pages/docs/background-size.mdx
+++ b/src/pages/docs/background-size.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Auto
 
-Use `.bg-auto` to display the background image at its default size.
+Use `bg-auto` to display the background image at its default size.
 
 ```html
 <template preview>
@@ -30,7 +30,7 @@ Use `.bg-auto` to display the background image at its default size.
 
 ## Cover
 
-Use `.bg-cover` to scale the background image until it fills the background layer.
+Use `bg-cover` to scale the background image until it fills the background layer.
 
 ```html
 <template preview>
@@ -43,7 +43,7 @@ Use `.bg-cover` to scale the background image until it fills the background laye
 
 ## Contain
 
-Use `.bg-contain` to scale the background image to the outer edges without cropping or stretching.
+Use `bg-contain` to scale the background image to the outer edges without cropping or stretching.
 
 ```html
 <template preview>
