--- a/src/pages/docs/border-collapse.mdx
+++ b/src/pages/docs/border-collapse.mdx
@@ -11,7 +11,7 @@ export const classes = { plugin }
 
 ## Collapse
 
-Use `.border-collapse` to combine adjacent cell borders into a single border when possible. Note that this includes collapsing borders on the top-level `<table>` tag.
+Use `border-collapse` to combine adjacent cell borders into a single border when possible. Note that this includes collapsing borders on the top-level `<table>` tag.
 
 ```html
 <template preview>
@@ -42,7 +42,7 @@ Use `.border-collapse` to combine adjacent cell borders into a single border whe
 
 ## Separate
 
-Use `.border-separate` to force each cell to display its own separate borders.
+Use `border-separate` to force each cell to display its own separate borders.
 
 ```html
 <template preview>
