--- a/src/pages/docs/border-radius.mdx
+++ b/src/pages/docs/border-radius.mdx
@@ -49,7 +49,7 @@ Use the `.rounded-full` utility to create pills and circles.
 
 ## No rounding
 
-Use `.rounded-none` to remove an existing border radius from an element.
+Use `rounded-none` to remove an existing border radius from an element.
 
 This is most commonly used to remove a border radius that was applied at a smaller breakpoint.
 
@@ -63,7 +63,7 @@ This is most commonly used to remove a border radius that was applied at a small
 
 ## Rounding sides separately
 
-Use `.rounded-{t|r|b|l}{-size?}` to only round one side an element.
+Use `rounded-{t|r|b|l}{-size?}` to only round one side an element.
 
 ```html
 <template preview class="flex justify-around text-sm p-4">
@@ -81,7 +81,7 @@ Use `.rounded-{t|r|b|l}{-size?}` to only round one side an element.
 
 ## Rounding corners separately
 
-Use `.rounded-{tl|tr|br|bl}{-size?}` to only round one corner an element.
+Use `rounded-{tl|tr|br|bl}{-size?}` to only round one corner an element.
 
 ```html
 <template preview class="flex justify-around text-sm p-4">
