--- a/src/pages/docs/border-style.mdx
+++ b/src/pages/docs/border-style.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Usage
 
-Use `.border-{style}` to control an element's border style.
+Use `border-{style}` to control an element's border style.
 
 ```html
 <template preview>
