--- a/src/pages/docs/cursor.mdx
+++ b/src/pages/docs/cursor.mdx
@@ -16,7 +16,7 @@ export const classes = { plugin }
 
 ## Auto
 
-Use `.cursor-auto` to allow the browser to change the cursor based on the current content (e.g. automatically change to `text` cursor when hovering over text).
+Use `cursor-auto` to allow the browser to change the cursor based on the current content (e.g. automatically change to `text` cursor when hovering over text).
 
 ```html
 <template preview class="text-center p-4">
@@ -32,7 +32,7 @@ Use `.cursor-auto` to allow the browser to change the cursor based on the curren
 
 ## Default
 
-Use `.cursor-default` to change the mouse cursor to always use the platform-dependent default cursor (usually an arrow).
+Use `cursor-default` to change the mouse cursor to always use the platform-dependent default cursor (usually an arrow).
 
 ```html
 <template preview class="text-center p-4">
@@ -48,7 +48,7 @@ Use `.cursor-default` to change the mouse cursor to always use the platform-depe
 
 ## Pointer
 
-Use `.cursor-pointer` to change the mouse cursor to indicate an interactive element (usually a pointing hand).
+Use `cursor-pointer` to change the mouse cursor to indicate an interactive element (usually a pointing hand).
 
 ```html
 <template preview class="text-center p-4">
@@ -64,7 +64,7 @@ Use `.cursor-pointer` to change the mouse cursor to indicate an interactive elem
 
 ## Wait
 
-Use `.cursor-wait` to change the mouse cursor to indicate something is happening in the background (usually an hourglass or watch).
+Use `cursor-wait` to change the mouse cursor to indicate something is happening in the background (usually an hourglass or watch).
 
 ```html
 <template preview class="text-center p-4">
@@ -80,7 +80,7 @@ Use `.cursor-wait` to change the mouse cursor to indicate something is happening
 
 ## Text
 
-Use `.cursor-text` to change the mouse cursor to indicate the text can be selected (usually an I-beam shape).
+Use `cursor-text` to change the mouse cursor to indicate the text can be selected (usually an I-beam shape).
 
 ```html
 <template preview class="text-center p-4">
@@ -96,7 +96,7 @@ Use `.cursor-text` to change the mouse cursor to indicate the text can be select
 
 ## Move
 
-Use `.cursor-move` to change the mouse cursor to indicate something that can be moved.
+Use `cursor-move` to change the mouse cursor to indicate something that can be moved.
 
 ```html
 <template preview class="text-center p-4">
@@ -112,7 +112,7 @@ Use `.cursor-move` to change the mouse cursor to indicate something that can be 
 
 ## Not Allowed
 
-Use `.cursor-not-allowed` to change the mouse cursor to indicate something can not be interacted with or clicked.
+Use `cursor-not-allowed` to change the mouse cursor to indicate something can not be interacted with or clicked.
 
 ```html
 <template preview class="text-center p-4">
