--- a/src/pages/docs/display.mdx
+++ b/src/pages/docs/display.mdx
@@ -12,7 +12,7 @@ export const classes = { plugin }
 
 ## Block
 
-Use `.block` to create a block-level element.
+Use `block` to create a block-level element.
 
 ```html
 <template preview>
@@ -26,7 +26,7 @@ Use `.block` to create a block-level element.
 
 ## Flow-Root
 
-Use `.flow-root` to create a block-level element with its own [block formatting context](https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Block_formatting_context).
+Use `flow-root` to create a block-level element with its own [block formatting context](https://developer.mozilla.org/en-US/docs/Web/Guide/CSS/Block_formatting_context).
 
 ```html
 <template preview>
@@ -41,7 +41,7 @@ Use `.flow-root` to create a block-level element with its own [block formatting 
 
 ## Inline Block
 
-Use `.inline-block` to create an inline block-level element.
+Use `inline-block` to create an inline block-level element.
 
 ```html
 <template preview>
@@ -55,7 +55,7 @@ Use `.inline-block` to create an inline block-level element.
 
 ## Inline
 
-Use `.inline` to create an inline element.
+Use `inline` to create an inline element.
 
 ```html
 <template preview>
@@ -69,7 +69,7 @@ Use `.inline` to create an inline element.
 
 ## Flex
 
-Use `.flex` to create a block-level flex container.
+Use `flex` to create a block-level flex container.
 
 ```html
 <template preview>
@@ -83,7 +83,7 @@ Use `.flex` to create a block-level flex container.
 
 ## Inline flex
 
-Use `.inline-flex` to create an inline flex container.
+Use `inline-flex` to create an inline flex container.
 
 ```html
 <template preview>
@@ -97,7 +97,7 @@ Use `.inline-flex` to create an inline flex container.
 
 ## Grid
 
-Use `.grid` to create a grid container.
+Use `grid` to create a grid container.
 
 ```html
 <template preview class="bg-white p-8">
@@ -121,7 +121,7 @@ Use `.grid` to create a grid container.
 
 ## Inline Grid
 
-Use `.inline-grid` to create an inline grid container.
+Use `inline-grid` to create an inline grid container.
 
 ```html
 <template preview class="bg-white p-8">
@@ -151,7 +151,7 @@ Use `.inline-grid` to create an inline grid container.
 
 ## Contents
 
-Use `.contents` to create a "phantom" container whose children act like direct children of the parent..
+Use `contents` to create a "phantom" container whose children act like direct children of the parent..
 
 ```html
 <template preview>
@@ -191,7 +191,7 @@ Use the `.table`, `.table-row`, `.table-cell`, `.table-caption`, `.table-column`
 
 ## Hidden
 
-Use `.hidden` to set an element to `display: none` and remove it from the page layout (compare with `.invisible` from the [visibility](/docs/visibility#invisible) documentation).
+Use `hidden` to set an element to `display: none` and remove it from the page layout (compare with `.invisible` from the [visibility](/docs/visibility#invisible) documentation).
 
 ```html
 <template preview>
