--- a/src/pages/docs/flex-direction.mdx
+++ b/src/pages/docs/flex-direction.mdx
@@ -17,10 +17,10 @@ export const classes = { plugin }
 
 ## Row
 
-Use `.flex-row` to position flex items horizontally in the same direction as text:
+Use `flex-row` to position flex items horizontally in the same direction as text:
 
 ```html amber
-<template preview>
+<template preview class="p-4">
   <div class="flex flex-row space-x-4">
     <div class="w-16 h-16 rounded-md bg-amber-500 text-white flex items-center justify-center text-2xl font-extrabold">1</div>
     <div class="w-16 h-16 rounded-md bg-amber-500 text-white flex items-center justify-center text-2xl font-extrabold">2</div>
@@ -37,10 +37,10 @@ Use `.flex-row` to position flex items horizontally in the same direction as tex
 
 ## Row reversed
 
-Use `.flex-row-reverse` to position flex items horizontally in the opposite direction:
+Use `flex-row-reverse` to position flex items horizontally in the opposite direction:
 
 ```html lightBlue
-<template preview>
+<template preview class="p-4">
   <div class="flex flex-row-reverse space-x-reverse space-x-4">
     <div class="w-16 h-16 rounded-md bg-light-blue-500 text-white flex items-center justify-center text-2xl font-extrabold">1</div>
     <div class="w-16 h-16 rounded-md bg-light-blue-500 text-white flex items-center justify-center text-2xl font-extrabold">2</div>
@@ -57,10 +57,10 @@ Use `.flex-row-reverse` to position flex items horizontally in the opposite dire
 
 ## Column
 
-Use `.flex-col` to position flex items vertically:
+Use `flex-col` to position flex items vertically:
 
 ```html emerald
-<template preview>
+<template preview class="p-4">
   <div class="flex flex-col space-y-4">
     <div class="h-16 rounded-md bg-emerald-500 text-white flex items-center justify-center text-2xl font-extrabold">1</div>
     <div class="h-16 rounded-md bg-emerald-500 text-white flex items-center justify-center text-2xl font-extrabold">2</div>
@@ -77,10 +77,10 @@ Use `.flex-col` to position flex items vertically:
 
 ## Column reversed
 
-Use `.flex-col-reverse` to position flex items vertically in the opposite direction:
+Use `flex-col-reverse` to position flex items vertically in the opposite direction:
 
 ```html rose
-<template preview>
+<template preview class="p-4">
   <div class="flex flex-col-reverse space-y-reverse space-y-4">
     <div class="h-16 rounded-md bg-rose-500 text-white flex items-center justify-center text-2xl font-extrabold">1</div>
     <div class="h-16 rounded-md bg-rose-500 text-white flex items-center justify-center text-2xl font-extrabold">2</div>
