--- a/src/pages/docs/flex-grow.mdx
+++ b/src/pages/docs/flex-grow.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Grow
 
-Use `.flex-grow` to allow a flex item to grow to fill any available space:
+Use `flex-grow` to allow a flex item to grow to fill any available space:
 
 ```html
 <template preview>
@@ -37,7 +37,7 @@ Use `.flex-grow` to allow a flex item to grow to fill any available space:
 
 ## Don't grow
 
-Use `.flex-grow-0` to prevent a flex item from growing:
+Use `flex-grow-0` to prevent a flex item from growing:
 
 ```html
 <template preview>
