--- a/src/pages/docs/flex-shrink.mdx
+++ b/src/pages/docs/flex-shrink.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Shrink
 
-Use `.flex-shrink` to allow a flex item to shrink if needed:
+Use `flex-shrink` to allow a flex item to shrink if needed:
 
 ```html
 <template preview>
@@ -37,7 +37,7 @@ Use `.flex-shrink` to allow a flex item to shrink if needed:
 
 ## Don't shrink
 
-Use `.flex-shrink-0` to prevent a flex item from shrinking:
+Use `flex-shrink-0` to prevent a flex item from shrinking:
 
 ```html
 <template preview>
