--- a/src/pages/docs/flex-wrap.mdx
+++ b/src/pages/docs/flex-wrap.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Don't wrap
 
-Use `.flex-nowrap` to prevent flex items from wrapping, causing inflexible items to overflow the container if necessary:
+Use `flex-nowrap` to prevent flex items from wrapping, causing inflexible items to overflow the container if necessary:
 
 ```html emerald
 <template preview>
@@ -37,7 +37,7 @@ Use `.flex-nowrap` to prevent flex items from wrapping, causing inflexible items
 
 ## Wrap normally
 
-Use `.flex-wrap` to allow flex items to wrap:
+Use `flex-wrap` to allow flex items to wrap:
 
 ```html lightBlue
 <template preview>
@@ -57,7 +57,7 @@ Use `.flex-wrap` to allow flex items to wrap:
 
 ## Wrap reversed
 
-Use `.flex-wrap-reverse` to wrap flex items in the reverse direction:
+Use `flex-wrap-reverse` to wrap flex items in the reverse direction:
 
 ```html purple
 <template preview>
