--- a/src/pages/docs/flex.mdx
+++ b/src/pages/docs/flex.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Initial
 
-Use `.flex-initial` to allow a flex item to shrink but not grow, taking into account its initial size:
+Use `flex-initial` to allow a flex item to shrink but not grow, taking into account its initial size:
 
 ```html
 <template preview>
@@ -69,7 +69,7 @@ Use `.flex-initial` to allow a flex item to shrink but not grow, taking into acc
 
 ## Flex 1
 
-Use `.flex-1` to allow a flex item to grow and shrink as needed, ignoring its initial size:
+Use `flex-1` to allow a flex item to grow and shrink as needed, ignoring its initial size:
 
 ```html
 <template preview>
@@ -114,7 +114,7 @@ Use `.flex-1` to allow a flex item to grow and shrink as needed, ignoring its in
 
 ## Auto
 
-Use `.flex-auto` to allow a flex item to grow and shrink, taking into account its initial size:
+Use `flex-auto` to allow a flex item to grow and shrink, taking into account its initial size:
 
 ```html
 <template preview>
@@ -159,7 +159,7 @@ Use `.flex-auto` to allow a flex item to grow and shrink, taking into account it
 
 ## None
 
-Use `.flex-none` to prevent a flex item from growing or shrinking:
+Use `flex-none` to prevent a flex item from growing or shrinking:
 
 ```html
 <template preview>
