--- a/src/pages/docs/float.mdx
+++ b/src/pages/docs/float.mdx
@@ -33,7 +33,7 @@ export const classes = {
 
 ## Float right
 
-Use `.float-right` to float an element to the right of its container.
+Use `float-right` to float an element to the right of its container.
 
 ```html
 <template preview>
@@ -46,7 +46,7 @@ Use `.float-right` to float an element to the right of its container.
 
 ## Float left
 
-Use `.float-left` to float an element to the left of its container.
+Use `float-left` to float an element to the left of its container.
 
 ```html
 <template preview>
@@ -59,7 +59,7 @@ Use `.float-left` to float an element to the left of its container.
 
 ## Don't float
 
-Use `.float-none` to reset any floats that are applied to an element. This is the default value for the float property.
+Use `float-none` to reset any floats that are applied to an element. This is the default value for the float property.
 
 ```html
 <template preview>
