--- a/src/pages/docs/font-family.mdx
+++ b/src/pages/docs/font-family.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Sans-serif
 
-Use `.font-sans` to apply a web safe sans-serif font family:
+Use `font-sans` to apply a web safe sans-serif font family:
 
 ```html
 <template preview>
@@ -33,7 +33,7 @@ Use `.font-sans` to apply a web safe sans-serif font family:
 
 ## Serif
 
-Use `.font-serif` to apply a web safe serif font family:
+Use `font-serif` to apply a web safe serif font family:
 
 ```html
 <template preview>
@@ -45,7 +45,7 @@ Use `.font-serif` to apply a web safe serif font family:
 
 ## Monospaced
 
-Use `.font-mono` to apply a web safe monospaced font family:
+Use `font-mono` to apply a web safe monospaced font family:
 
 ```html
 <template preview>
