--- a/src/pages/docs/order.mdx
+++ b/src/pages/docs/order.mdx
@@ -12,7 +12,7 @@ export const classes = { plugin }
 
 ## Usage
 
-Use `.order-{order}` to render flex items in a different order than they appear in the DOM.
+Use `order-{order}` to render flex items in a different order than they appear in the DOM.
 
 ```html
 <template preview>
