--- a/src/pages/docs/pointer-events.mdx
+++ b/src/pages/docs/pointer-events.mdx
@@ -16,9 +16,9 @@ export const classes = { plugin }
 
 ## Usage
 
-Use `.pointer-events-auto` to revert to the default browser behavior for pointer events (like `:hover` and `click`).
+Use `pointer-events-auto` to revert to the default browser behavior for pointer events (like `:hover` and `click`).
 
-Use `.pointer-events-none` to make an element ignore pointer events. The pointer events will still trigger on child elements and pass-through to elements that are "beneath" the target.
+Use `pointer-events-none` to make an element ignore pointer events. The pointer events will still trigger on child elements and pass-through to elements that are "beneath" the target.
 
 ```html
 <template preview>
