--- a/src/pages/docs/resize.mdx
+++ b/src/pages/docs/resize.mdx
@@ -11,7 +11,7 @@ export const classes = { plugin }
 
 ## Resize in all directions
 
-Use `.resize` to make an element horizontally and vertically resizable.
+Use `resize` to make an element horizontally and vertically resizable.
 
 ```html
 <template preview>
@@ -21,7 +21,7 @@ Use `.resize` to make an element horizontally and vertically resizable.
 
 ## Resize vertically
 
-Use `.resize-y` to make an element vertically resizable.
+Use `resize-y` to make an element vertically resizable.
 
 ```html
 <template preview>
@@ -31,7 +31,7 @@ Use `.resize-y` to make an element vertically resizable.
 
 ## Resize horizontally
 
-Use `.resize-x` to make an element horizontally resizable.
+Use `resize-x` to make an element horizontally resizable.
 
 ```html
 <template preview>
@@ -41,7 +41,7 @@ Use `.resize-x` to make an element horizontally resizable.
 
 ## Prevent resizing
 
-Use `.resize-none` to prevent an element from being resizable.
+Use `resize-none` to prevent an element from being resizable.
 
 ```html
 <template preview>
