--- a/src/pages/docs/stroke.mdx
+++ b/src/pages/docs/stroke.mdx
@@ -11,7 +11,7 @@ export const classes = { plugin }
 
 ## Usage
 
-Use `.stroke-current` to set the stroke color of an SVG to the current text color. This makes it easy to set an element's stroke color by combining this class with an existing [text color utility](/docs/text-color).
+Use `stroke-current` to set the stroke color of an SVG to the current text color. This makes it easy to set an element's stroke color by combining this class with an existing [text color utility](/docs/text-color).
 
 Useful for styling icon sets like [Feather](https://feathericons.com/) that are drawn entirely with strokes.
 
