--- a/src/pages/docs/user-select.mdx
+++ b/src/pages/docs/user-select.mdx
@@ -16,7 +16,7 @@ export const classes = { plugin }
 
 ## Disable selecting text
 
-Use `.select-none` to prevent selecting text in an element and its children.
+Use `select-none` to prevent selecting text in an element and its children.
 
 ```html
 <template preview class="text-center p-4">
@@ -32,7 +32,7 @@ Use `.select-none` to prevent selecting text in an element and its children.
 
 ## Allow selecting text
 
-Use `.select-text` to allow selecting text in an element and its children.
+Use `select-text` to allow selecting text in an element and its children.
 
 ```html
 <template preview class="text-center p-4">
@@ -48,7 +48,7 @@ Use `.select-text` to allow selecting text in an element and its children.
 
 ## Select all text in one click
 
-Use `.select-all` to automatically select all the text in an element when a user clicks.
+Use `select-all` to automatically select all the text in an element when a user clicks.
 
 ```html
 <template preview class="text-center p-4">
@@ -64,7 +64,7 @@ Use `.select-all` to automatically select all the text in an element when a user
 
 ## Auto
 
-Use `.select-auto` to use the default browser behavior for selecting text. Useful for undoing other classes like `.select-none` at different breakpoints.
+Use `select-auto` to use the default browser behavior for selecting text. Useful for undoing other classes like `.select-none` at different breakpoints.
 
 ```html
 <template preview class="text-center p-4">
