--- a/src/pages/docs/whitespace.mdx
+++ b/src/pages/docs/whitespace.mdx
@@ -12,7 +12,7 @@ export const classes = { plugin }
 
 ## Normal
 
-Use `.whitespace-normal` to cause text to wrap normally within an element. Newlines and spaces will be collapsed.
+Use `whitespace-normal` to cause text to wrap normally within an element. Newlines and spaces will be collapsed.
 
 ```html
 <template preview>
@@ -26,7 +26,7 @@ Use `.whitespace-normal` to cause text to wrap normally within an element. Newli
 
 ## No Wrap
 
-Use `.whitespace-nowrap` to prevent text from wrapping within an element. Newlines and spaces will be collapsed.
+Use `whitespace-nowrap` to prevent text from wrapping within an element. Newlines and spaces will be collapsed.
 
 ```html
 <template preview>
@@ -40,7 +40,7 @@ Use `.whitespace-nowrap` to prevent text from wrapping within an element. Newlin
 
 ## Pre
 
-Use `.whitespace-pre` to preserve newlines and spaces within an element. Text will not be wrapped.
+Use `whitespace-pre` to preserve newlines and spaces within an element. Text will not be wrapped.
 
 ```html
 <template preview>
@@ -54,7 +54,7 @@ Use `.whitespace-pre` to preserve newlines and spaces within an element. Text wi
 
 ## Pre Line
 
-Use `.whitespace-pre-line` to preserve newlines but not spaces within an element. Text will be wrapped normally.
+Use `whitespace-pre-line` to preserve newlines but not spaces within an element. Text will be wrapped normally.
 
 ```html
 <template preview>
@@ -68,7 +68,7 @@ Use `.whitespace-pre-line` to preserve newlines but not spaces within an element
 
 ## Pre Wrap
 
-Use `.whitespace-pre-wrap` to preserve newlines and spaces within an element. Text will be wrapped normally.
+Use `whitespace-pre-wrap` to preserve newlines and spaces within an element. Text will be wrapped normally.
 
 ```html
 <template preview>
