--- a/src/pages/docs/width.mdx
+++ b/src/pages/docs/width.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Auto
 
-Use `.w-auto` to let the browser calculate and select the width for the element.
+Use `w-auto` to let the browser calculate and select the width for the element.
 
 ```html
 <template preview>
@@ -31,7 +31,7 @@ Use `.w-auto` to let the browser calculate and select the width for the element.
 
 ## Screen Width
 
-Use `.w-screen` to make an element span the entire width of the viewport.
+Use `w-screen` to make an element span the entire width of the viewport.
 
 ```html
 <template preview class="overflow-x-scroll p-4">
@@ -41,7 +41,7 @@ Use `.w-screen` to make an element span the entire width of the viewport.
 
 ## Fixed Width
 
-Use `.w-{number}` or `.w-px` to set an element to a fixed width.
+Use `w-{number}` or `.w-px` to set an element to a fixed width.
 
 ```html
 <template preview>
@@ -146,7 +146,7 @@ Use `.w-{number}` or `.w-px` to set an element to a fixed width.
 
 ## Fluid Width
 
-Use `.w-{fraction}` or `.w-full` to set an element to a percentage based width.
+Use `w-{fraction}` or `.w-full` to set an element to a percentage based width.
 
 ```html
 <template preview>
