--- a/src/pages/docs/gap.mdx
+++ b/src/pages/docs/gap.mdx
@@ -15,7 +15,7 @@ export const classes = {
 
 ## Gap
 
-Use `.gap-{size}` to change the gutter size in grid layouts.
+Use `gap-{size}` to change the gutter size in grid layouts.
 
 ```html indigo
 <template preview>
@@ -65,7 +65,7 @@ Use `.gap-{size}` to change the gutter size in grid layouts.
 
 ## Row Gap
 
-Use `.gap-y-{size}` to change the gutter size between rows in grid layouts.
+Use `gap-y-{size}` to change the gutter size between rows in grid layouts.
 
 ```html emerald
 <template preview>
@@ -116,7 +116,7 @@ Note that prior to Tailwind v1.7.0, these utilities were named `.row-gap-{size}`
 
 ## Column Gap
 
-Use `.gap-x-{size}` to change the gutter size between columns in grid layouts.
+Use `gap-x-{size}` to change the gutter size between columns in grid layouts.
 
 ```html rose
 <template preview>
