--- a/src/pages/docs/ring-offset-width.mdx
+++ b/src/pages/docs/ring-offset-width.mdx
@@ -93,7 +93,7 @@ Use the `.shadow-outline` utility to apply a focus-ring-style shadow to an eleme
 
 ## No shadow
 
-Use `.shadow-none` to remove an existing box shadow from an element. This is most commonly used to remove a shadow that was applied at a smaller breakpoint.
+Use `shadow-none` to remove an existing box shadow from an element. This is most commonly used to remove a shadow that was applied at a smaller breakpoint.
 
 ```html
 <template preview class="flex justify-around text-sm p-4 py-8">
