--- a/src/pages/docs/table-layout.mdx
+++ b/src/pages/docs/table-layout.mdx
@@ -16,7 +16,7 @@ export const classes = { plugin }
 
 ## Auto
 
-Use `.table-auto` to allow the table to automatically size columns to fit the contents of the cell.
+Use `table-auto` to allow the table to automatically size columns to fit the contents of the cell.
 
 ```html
 <template preview>
@@ -51,7 +51,7 @@ Use `.table-auto` to allow the table to automatically size columns to fit the co
 
 ## Fixed
 
-Use `.table-fixed` to allow the table to ignore the content and use fixed widths for columns. The width of the first row will set the column widths for the whole table.
+Use `table-fixed` to allow the table to ignore the content and use fixed widths for columns. The width of the first row will set the column widths for the whole table.
 
 You can manually set the widths for some columns and the rest of the available width will be divided evenly amongst the columns without explicit width.
 
