--- a/src/pages/docs/vertical-align.mdx
+++ b/src/pages/docs/vertical-align.mdx
@@ -18,7 +18,7 @@ export const classes = { plugin }
 
 ## Baseline
 
-Use `.align-baseline` to align the baseline of an element with the baseline of its parent.
+Use `align-baseline` to align the baseline of an element with the baseline of its parent.
 
 ```html
 <template preview>
@@ -36,7 +36,7 @@ Use `.align-baseline` to align the baseline of an element with the baseline of i
 
 ## Top
 
-Use `.align-top` to align the top of an element and its descendants with the top of the entire line.
+Use `align-top` to align the top of an element and its descendants with the top of the entire line.
 
 ```html
 <template preview>
@@ -54,7 +54,7 @@ Use `.align-top` to align the top of an element and its descendants with the top
 
 ## Middle
 
-Use `.align-middle` to align the middle of an element with the baseline plus half the x-height of the parent.
+Use `align-middle` to align the middle of an element with the baseline plus half the x-height of the parent.
 
 ```html
 <template preview>
@@ -72,7 +72,7 @@ Use `.align-middle` to align the middle of an element with the baseline plus hal
 
 ## Bottom
 
-Use `.align-bottom` to align the bottom of an element and its descendants with the bottom of the entire line.
+Use `align-bottom` to align the bottom of an element and its descendants with the bottom of the entire line.
 
 ```html
 <template preview>
@@ -90,7 +90,7 @@ Use `.align-bottom` to align the bottom of an element and its descendants with t
 
 ## Text Top
 
-Use `.align-text-top` to align the top of an element with the top of the parent element's font.
+Use `align-text-top` to align the top of an element with the top of the parent element's font.
 
 ```html
 <template preview>
@@ -108,7 +108,7 @@ Use `.align-text-top` to align the top of an element with the top of the parent 
 
 ## Text Bottom
 
-Use `.align-text-bottom` to align the bottom of an element with the bottom of the parent element's font.
+Use `align-text-bottom` to align the bottom of an element with the bottom of the parent element's font.
 
 ```html
 <template preview>
