--- a/src/pages/docs/visibility.mdx
+++ b/src/pages/docs/visibility.mdx
@@ -17,7 +17,7 @@ export const classes = { plugin }
 
 ## Visible
 
-Use `.visible` to make an element visible. This is mostly useful for undoing the `.invisible` utility at different screen sizes.
+Use `visible` to make an element visible. This is mostly useful for undoing the `.invisible` utility at different screen sizes.
 
 ```html
 <template preview class="flex justify-center p-4">
@@ -35,7 +35,7 @@ Use `.visible` to make an element visible. This is mostly useful for undoing the
 
 ## Invisible
 
-Use `.invisible` to hide an element, but still maintain its place in the DOM, affecting the layout of other elements (compare with `.hidden` from the [display](/docs/display#hidden) documentation).
+Use `invisible` to hide an element, but still maintain its place in the DOM, affecting the layout of other elements (compare with `.hidden` from the [display](/docs/display#hidden) documentation).
 
 ```html
 <template preview class="flex justify-center p-4">
