--- a/src/pages/docs/word-break.mdx
+++ b/src/pages/docs/word-break.mdx
@@ -12,7 +12,7 @@ export const classes = { plugin }
 
 ## Normal
 
-Use `.break-normal` to only add line breaks at normal word break points.
+Use `break-normal` to only add line breaks at normal word break points.
 
 ```html
 <template preview>
@@ -26,7 +26,7 @@ Use `.break-normal` to only add line breaks at normal word break points.
 
 ## Break Words
 
-Use `.break-words` to add line breaks mid-word if needed.
+Use `break-words` to add line breaks mid-word if needed.
 
 ```html
 <template preview>
@@ -40,7 +40,7 @@ Use `.break-words` to add line breaks mid-word if needed.
 
 ## Break All
 
-Use `.break-all` to add line breaks whenever necessary, without trying to preserve whole words.
+Use `break-all` to add line breaks whenever necessary, without trying to preserve whole words.
 
 ```html
 <template preview>
